# bevy_flipbook

./: Cargo.toml  LICENSE  README.md
assets/models/: fox-remap_info.json  fox.glb  fox_vat.exr
assets/shaders/: vat.wgsl
examples/: fox.rs  fox_custom_material.rs  fox_grid.rs  fox_rates.rs  fox_reclaim.rs  fox_shadow.rs
src/: lib.rs  material.rs  remap_info.rs  slot.rs
src/shaders/: vat.wgsl
src/slot/: allocator.rs
