[package]
name = "bevy_flipbook"
version = "0.1.0"
edition = "2024"
description = "OpenVAT vertex animation texture rendering for Bevy"
license = "MIT"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_pbr",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
bevy = { version = "0.18", features = ["exr"] }

[[example]]
name = "fox"
path = "examples/fox.rs"

[[example]]
name = "fox_reclaim"
path = "examples/fox_reclaim.rs"

[[example]]
name = "fox_grid"
path = "examples/fox_grid.rs"
